tests/semantic_errors/testcase20.c
// invalid casting char -> char

int main(void){
    char x;
    x = (char)x;
}